random shot at fixing the missing background

--- a/amalgam/modeling-wip/assets/css/modeling.css
+++ b/amalgam/modeling-wip/assets/css/modeling.css
@@ -6,4 +6,5 @@ body
 	background: #EFEFEF url('/eclipse.org-common/themes/Nova/images/bg.png') repeat-x scroll;
 	font-family: Arial,sans-serif;
 	text-align: center;
+	background-color:none;
 }
